@@ -1,5 +1,16 @@
 2008-07-10  Mike Krüger <mkrueger@novell.com> 
 
+	* MonoDevelop.Projects.Dom.Output/NetAmbience.cs,
+	  MonoDevelop.Projects.Dom/ResolveResult.cs,
+	  MonoDevelop.Projects.Dom/DomType.cs,
+	  MonoDevelop.Projects.Dom/DomTypeProxy.cs,
+	  MonoDevelop.Projects.Dom/ExpressionContext.cs,
+	  MonoDevelop.Projects.Dom/DomPersistence.cs,
+	  MonoDevelop.Projects.Parser/DefaultParserService.cs: Worked on code
+	  completion.
+
+2008-07-10  Mike Krüger <mkrueger@novell.com> 
+
 	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
 	  MonoDevelop.Projects.Dom/ExpressionContext.cs,
 	  MonoDevelop.Projects.Dom/ExpressionResult.cs: Worked on code
